--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ apify >= 2.3.0,< 3
 apify-client < 2.0  # Optional for Apify integration
 llama-index < 1.0.0
 polars < 2.0.0
-playwright
+playwright>=1.40.0
 pydantic
 typer
 pandas
