Add admin JWT auth

--- a/env.example
+++ b/env.example
@@ -27,3 +27,6 @@ CONCURRENCY=2
 MAX_RETRIES=3
 TIMEOUT_SECS=60
 OWNER_EMAIL=user@example.com
+
+# JWT secret for verifying Supabase tokens
+SUPABASE_JWT_SECRET=your-jwt-secret-here
