Fix and enhance frontend: resolve Storybook hooks error, add modern styling, improve UX
- Fix: Resolved React hooks usage error in Pagination.stories.tsx
- Enhancement: Added comprehensive CSS styling with modern design patterns
- Improvement: Enhanced Login, Teams, and Credits pages with loading states and error handling
- UX: Added proper navigation, form styling, and responsive design
- Code Quality: Fixed all ESLint errors and improved TypeScript usage
- Documentation: Updated README with comprehensive setup and usage instructions
- Components: Enhanced Form, Table, and Pagination components with better styling
- Authentication: Improved auth flow with proper error handling and redirects

All components now properly styled, build successful, and production-ready.

--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -6,7 +6,7 @@ FROM apify/actor-python:3.13 as deps
 WORKDIR /app
 
 # Copy requirements first for better layer caching
-COPY requirements.txt ./
+COPY backend/requirements.txt ./
 
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt && \
@@ -21,8 +21,8 @@ COPY --from=deps /usr/local/lib/python3.13/site-packages /usr/local/lib/python3.
 COPY --from=deps /app/requirements.lock ./
 
 # Copy source code
-COPY src/ ./src/
-COPY requirements.txt ./
+COPY backend/src/ ./src/
+COPY backend/requirements.txt ./
 
 # Compile Python bytecode for performance
 RUN python3 -m compileall -q src/ && \
