--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -19,7 +19,7 @@ COPY src/ ./src/
 RUN mkdir -p /app/data/jobs /app/data/logs /app/storage
 
 # Copy environment file for development
-COPY .env.example .env
+COPY examples/env.example .env
 
 # Create non-root user for security
 RUN useradd --create-home --shell /bin/bash app && \
