--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -6,20 +6,20 @@ FROM apify/actor-python:3.13
 WORKDIR /app
 
 # Install development dependencies
-COPY requirements.txt ./
+COPY backend/requirements.txt ./
 RUN pip install -r requirements.txt
 
 # Install development tools
 RUN pip install pytest pytest-asyncio black isort mypy
 
 # Copy source code
-COPY src/ ./src/
+COPY backend/src/ ./src/
 
 # Create development directories
 RUN mkdir -p /app/data/jobs /app/data/logs /app/storage
 
 # Copy environment file for development
-COPY .env.example .env
+COPY examples/env.example .env
 
 # Create non-root user for security
 RUN useradd --create-home --shell /bin/bash app && \
