--- a/infrastructure/docker/docker-compose.prod.yml
+++ b/infrastructure/docker/docker-compose.prod.yml
@@ -3,8 +3,8 @@ version: "3.9"
 services:
   api:
     build:
-      context: ../../backend
-      dockerfile: Dockerfile.prod
+      context: ../../
+      dockerfile: backend/Dockerfile.prod
       target: runtime
     container_name: linkedin-agent-api
     command: ["python", "src/server.py"]
@@ -35,8 +35,8 @@ services:
 
   worker:
     build:
-      context: ../../backend
-      dockerfile: Dockerfile.prod
+      context: ../../
+      dockerfile: backend/Dockerfile.prod
       target: runtime
     container_name: linkedin-agent-worker
     command: ["python", "src/worker.py"]
