Add structured output system and job management
- Add schemas_output.py with Pydantic models for structured job results
- Add storage_manager.py for centralized data persistence and retrieval
- Add job_manager.py CLI tool for job management and testing
- Update simple_server.py with structured endpoints and error handling
- Enhance simple_local_adapter.py with structured output support
- Update tools_simple.py with improved contact extraction
- Update Dockerfiles for better production builds
- Update documentation with structured output examples

--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -2,7 +2,7 @@
 # Optimized for security, performance, and maintainability
 
 # Stage 1: Dependencies
-FROM apify/actor-python:3.13 as deps
+FROM apify/actor-python:3.13 AS deps
 WORKDIR /app
 
 # Copy requirements first for better layer caching
@@ -13,7 +13,7 @@ RUN pip install --no-cache-dir -r requirements.txt && \
     pip freeze > requirements.lock
 
 # Stage 2: Source Code and Compilation
-FROM apify/actor-python:3.13 as builder
+FROM apify/actor-python:3.13 AS builder
 WORKDIR /app
 
 # Copy dependencies from deps stage
@@ -30,7 +30,7 @@ RUN python3 -m compileall -q src/ && \
     find src/ -name "*.pyc" -exec mv {} {}.pyc \;
 
 # Stage 3: Runtime
-FROM apify/actor-python:3.13-slim as runtime
+FROM apify/actor-python:3.13-slim AS runtime
 WORKDIR /app
 
 # Install runtime dependencies only
